Adición de la screen: 'Administrar eventos' con todas sus funcionalidades  Changes to be committed: 	modified:   src/App.js 	modified:   src/components/box/EventAdminBox.js 	modified:   src/components/box/EventBox.js 	modified:   src/components/context/GlobalContext.js 	modified:   src/components/screens/Screens.js 	modified:   src/components/scripts/Events.js 	modified:   src/components/styles/pieces/modalWindow.css

--- a/src/components/styles/pieces/modalWindow.css
+++ b/src/components/styles/pieces/modalWindow.css
@@ -63,6 +63,7 @@
 
 .modal-container .content-box .modal-form input[type=text],
 .modal-container .content-box .modal-form input[type=date],
+.modal-container .content-box .modal-form input[type=datetime-local],
 .modal-container .content-box .modal-form select{
    width: 100%;
 }
