Finalizacion de la seccion de Administracion de Candidatos  On branch master  Changes to be committed: 	modified:   public/favicon.ico 	new file:   public/favicon2.ico 	modified:   public/index.html 	modified:   src/App.js 	new file:   src/components/box/CandidateAdminBox.js 	new file:   src/components/box/CandidateAdminList.js 	modified:   src/components/box/CandidateBox.js 	modified:   src/components/box/CategoryAdminBox.js 	modified:   src/components/box/EventAdminBox.js 	modified:   src/components/box/EventBox.js 	modified:   src/components/box/Menu.js 	modified:   src/components/box/ProfileBox.js 	modified:   src/components/box/StatisticsBox.js 	modified:   src/components/context/GlobalContext.js 	modified:   src/components/pieces/Button.js 	modified:   src/components/pieces/DropDown.js 	modified:   src/components/pieces/ModalWindow.js 	new file:   src/components/pieces/Pagination.js 	modified:   src/components/screens/Screens.js 	new file:   src/components/scripts/AsignCandidates.js 	new file:   src/components/scripts/Candidates.js 	modified:   src/components/scripts/Category.js 	modified:   src/components/scripts/Events.js 	modified:   src/components/styles/app.css 	new file:   src/components/styles/box/candidateAdminBox.css 	new file:   src/components/styles/box/candidateAdminList.css 	modified:   src/components/styles/box/eventAdminBox.css 	modified:   src/components/styles/box/eventbox.css 	modified:   src/components/styles/box/menu.css 	modified:   src/components/styles/index.css 	modified:   src/components/styles/pieces/button.css 	modified:   src/components/styles/pieces/dropDown.css 	modified:   src/components/styles/pieces/modalWindow.css 	new file:   src/components/styles/pieces/pagination.css 	modified:   src/components/styles/screens/screens.css

--- a/src/components/styles/box/eventbox.css
+++ b/src/components/styles/box/eventbox.css
@@ -5,6 +5,10 @@
 .event-box .box-body{
    display: flex;
    flex-direction: column;
-   gap: 1rem;
+   gap: .5rem;
    padding: 1rem;
+}
+
+.event-box .box-body .btn{
+   margin-top: .5rem;
 }
