--- a/src/components/styles/box/eventAdminBox.css
+++ b/src/components/styles/box/eventAdminBox.css
@@ -24,7 +24,6 @@
    justify-content: space-between;
    justify-items: center;
    padding: .5rem 1rem;
-   /* margin-bottom: .5rem; */
    background: var(--light2);
    border-radius: .5rem;
    border-left: 0rem solid transparent;
@@ -32,7 +31,7 @@
 }
 .event-admin-box .box-body .event-item:hover,
 .event-admin-box .box-body .active{
-   border-left: .5rem solid var(--green1);
+   border-left: .5rem solid var(--blue1);
 }
 
 .event-admin-box .box-body .event-item .date-event{
