--- a/src/components/styles/pieces/dropDown.css
+++ b/src/components/styles/pieces/dropDown.css
@@ -1,18 +1,18 @@
 .dropdown-a-container{
    background: var(--light2);
-   border-radius: .5rem;
+   user-select: none;
    overflow: hidden;
    cursor: pointer;
-   user-select: none;
 }
 
 .dropdown-a-container .dropdown-title{
    display: flex;
    justify-content: space-between;
    align-items: center;
-   padding: 1rem;
-   background: var(--dark2);
+   padding: .5rem 1rem;
+   background: var(--blue1);
    color: var(--light1);
+   text-transform: uppercase;
 }
 
 .dropdown-a-container .dropdown-title .icon{
@@ -25,11 +25,18 @@
 }
 
 .dropdown-a-container .dropdown-list{
-   transition: .2s;
+   transition: height .2s;
    height: 0;
    max-height: 10rem;
-   transform: translateX(-5%);
    overflow: auto;
+}
+
+.dropdown-a-container .dropdown-list::-webkit-scrollbar{
+   display: none;
+}
+
+.dropdown-a-container .enable{
+   height: 100%;
 }
 
 .dropdown-a-container .dropdown-list .dropdown-item{
@@ -37,11 +44,7 @@
 }
 
 .dropdown-a-container .dropdown-list .dropdown-item:hover{
-   background: var(--dark-t2);
    color: var(--light1);
-}
-
-.dropdown-a-container .enable{
-   transform: translateX(0);
-   height: auto;
+   background: var(--blue1);
+   opacity: .7;
 }
