Adding responsive functionallity  On branch master  Changes to be committed: 	modified:   package.json 	modified:   src/components/box/Menu.js 	modified:   src/components/box/ProfileBox.js 	modified:   src/components/pieces/ModalWindow.js 	modified:   src/components/screens/Screens.js 	modified:   src/components/scripts/Events.js 	modified:   src/components/styles/app.css 	modified:   src/components/styles/box/candidateAdminList.css 	modified:   src/components/styles/box/menu.css 	modified:   src/components/styles/box/profilebox.css 	modified:   src/components/styles/box/statisticsBox.css 	modified:   src/components/styles/screens/screens.css

--- a/src/components/styles/app.css
+++ b/src/components/styles/app.css
@@ -4,7 +4,15 @@
    min-height: 100vh;
    font-size: .9rem;
 }
-
 .disabled{
    display: none;
+}
+
+/*
+------------------------------------------MEDIA QUERYES
+*/
+@media screen and (max-width: 57rem){
+   .all-container{
+      grid-template-columns: 1fr;
+   }
 }
