--- a/src/components/styles/box/menu.css
+++ b/src/components/styles/box/menu.css
@@ -79,3 +79,39 @@
 .menu-container .header ul li .icon{
    margin-right: .5rem;
 }
+
+
+/*
+------------------------------------------MEDIA QUERYES
+*/
+@media screen and (max-width: 57rem){
+   .menu-container{
+      transition: .2s;
+      position: fixed;
+      top: 3.2rem;
+      left: 0;
+      height: 100%;
+      width: 100%;
+      z-index: 1;
+      opacity: 0;
+      padding: 0;
+      pointer-events: none;
+      background: var(--dark-t);
+   }
+   .menu-active{
+      opacity: 1;
+      pointer-events: all;
+   }
+   .menu-container .stick-menu{
+      transition: .2s;
+      padding: 1rem 2rem;
+      width: fit-content;
+      height: 100%;
+      left: 0;
+      background: var(--dark1);
+      transform: translateX(-100%);
+   }
+   .menu-active > .stick-menu{
+      transform: none;
+   }
+}
