--- a/src/components/styles/screens/screens.css
+++ b/src/components/styles/screens/screens.css
@@ -32,3 +32,15 @@
    justify-content: space-between;
    padding: 1.5rem 1rem;
 }
+
+
+/*
+-----------------------------------MEDIA QUERYES
+*/
+
+@media screen and (max-width: 40rem) {
+   .container .box-container{
+      grid-template-columns: 1fr;
+      padding: 1rem .5rem;
+   }
+}
